fix(travel tag): shift font size for new token
affects: @entur/travel

--- a/packages/travel/src/TravelTag.scss
+++ b/packages/travel/src/TravelTag.scss
@@ -21,7 +21,7 @@
     background-color: $colors-blues-blue20;
   }
   > .eds-icon {
-    font-size: $font-sizes-extra-large;
+    font-size: $font-sizes-extra-large2;
   }
   &__close-button {
     appearance: none;
